<!--
  ~ Copyright (C) 2016 Álinson Santos Xavier <isoron@gmail.com>
  ~
  ~ This file is part of Loop Habit Tracker.
  ~
  ~ Loop Habit Tracker is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by the
  ~ Free Software Foundation, either version 3 of the License, or (at your
  ~ option) any later version.
  ~
  ~ Loop Habit Tracker is distributed in the hope that it will be useful, but
  ~ WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  ~ or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
  ~ more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/actionAdd"
        android:icon="?iconAdd"
        android:title="@string/add_habit"
        app:showAsAction="always"/>

    <!-- NEW TAG BUTTON STUFF STARTS HERE -->
    <item
        android:id="@+id/actionTag"
        android:icon="?iconUnarchive"
        android:title="Add or Remove Tag"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/addTag"
                android:enabled="true"
                android:title="Add Tag"/>

            <item
                android:id="@+id/removeTag"
                android:enabled="true"
                android:title="Remove Tag"/>
        </menu>
    </item>
    <!-- NEW TAG BUTTON STUFF STARTS HERE -->


    <item
        android:id="@+id/action_filter"
        android:icon="?iconFilter"
        android:title="@string/filter"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/actionHideArchived"
                android:checkable="true"
                android:enabled="true"
                android:title="@string/hide_archived"/>

            <item
                android:id="@+id/actionHideCompleted"
                android:checkable="true"
                android:enabled="true"
                android:title="@string/hide_completed"/>
        </menu>
    </item>

    <item
        android:id="@+id/actionToggleNightMode"
        android:checkable="true"
        android:enabled="true"
        android:orderInCategory="50"
        android:title="@string/night_mode"
        app:showAsAction="never"/>

    <item
        android:id="@+id/actionSettings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/actionFAQ"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never"/>

    <item
        android:id="@+id/actionAbout"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never"/>

</menu>
