<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 Álinson Santos Xavier <isoron@gmail.com>
  ~
  ~ This file is part of Loop Habit Tracker.
  ~
  ~ Loop Habit Tracker is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by the
  ~ Free Software Foundation, either version 3 of the License, or (at your
  ~ option) any later version.
  ~
  ~ Loop Habit Tracker is distributed in the hope that it will be useful, but
  ~ WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  ~ or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
  ~ more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit_habit"
        android:title="@string/edit"
        android:icon="?iconEdit"/>

<!-- this would need to be changed according to a tag -->
    <item
        android:id="@+id/action_color"
        android:title="@string/color_picker_default_title"
        android:icon="?iconChangeColor"/>

    <item
        android:id="@+id/action_archive_habit"
        android:title="@string/archive"
        android:icon="?iconArchive" />

    <item
        android:id="@+id/action_unarchive_habit"
        android:title="@string/unarchive"
        android:icon="?iconUnarchive"/>

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        app:showAsAction="never"/>

</menu>